// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal screenshot custom overlay 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.modal__modal {
        position: relative;
        animation: modal-hide 0.3s ease-in-out;
        margin: auto 0;
    }
    @keyframes modal-show {
        0% {
            transform: translate3d(0, -10px, 0) scale(0.9);
        }

        100% {
            transform: translate3d(0, 0, 0) scale(1);
        }
    }
    @keyframes modal-hide {
        0% {
            transform: translate3d(0, 0, 0) scale(1);
        }

        100% {
            transform: translate3d(0, 40px, 0) scale(0.9);
        }
    }
    @keyframes overlay-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes overlay-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .modal__modal-cross {
        position: absolute;
        cursor: pointer;
        top: var(--space-12);
        right: var(--space-12);
        color: var(--clr-str-black-050);
        z-index: 1;
    }
    .modal__modal-cross:hover {
            color: var(--clr-str-black-800);
        }
    .modal__modal-cross_view_dark {
            color: var(--clr-str-pure-white-050);
        }
    .modal__modal-cross_view_dark:hover {
                color: var(--clr-str-white-100);
            }
    .modal__overlay_visible .modal__modal {
        animation: modal-show 0.3s ease-in-out;
    }
    .modal__overlay.modal__overlay_visible {
        animation: overlay-show 0.3s ease-in-out forwards;
    }
    .modal__overlay {
        opacity: 0;
        animation: overlay-hide 0.3s ease-in-out;
        padding: 60px 0;
        position: fixed;
        overflow: auto;
        display: flex;
        justify-content: center;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }
    .modal__overlay_default-view {
            background-color: var(--clr-el-gray-060);
            backdrop-filter: blur(8px);
        }
body > div::-webkit-scrollbar {
    visibility: visible;
}

.scrollable-container__vert-scroll-bar {
        right: 0;
        bottom: 0;
        top: 0;
        padding: var(--space-4) var(--space-2);
        background: var(--clr-bg-gray-3);
    }

.scrollable-container__vert-scroll-thumb {
        border-radius: 16px;
        background-color: var(--clr-el-gray-050);
    }
.modal-story__modal {
        background-color: var(--clr-bg-gray-1);
        border-radius: 20px;
        width: 600px;
        padding: var(--space-20);
    }

        .modal-story__modal_high {
            height: 1000px;
        }
    .modal-story__button {
        padding: var(--space-20);
        max-width: max-content;
        border-radius: 20px;
        cursor: pointer;
        background-color: var(--clr-el-gray-040);
    }
    .modal-story__overlay {
        background-color: rgba(0, 0, 0, 0.3);
    }

<div class=\\"modal-story__button\\">click</div><div style=\\"z-index:999\\" data-testid=\\"modal-overlay\\" class=\\"modal__overlay modal-story__overlay modal__overlay_visible\\"><div class=\\"modal__modal modal-story__modal\\"><div data-testid=\\"modal-cross\\" class=\\"modal__modal-cross modal__modal-cross_view_light\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19.2071 6.20711C19.5976 5.81658 19.5976 5.18342 19.2071 4.79289C18.8166 4.40237 18.1834 4.40237 17.7929 4.79289L12 10.5858L6.20711 4.79289C5.81658 4.40237 5.18342 4.40237 4.79289 4.79289C4.40237 5.18342 4.40237 5.81658 4.79289 6.20711L10.5858 12L4.79289 17.7929C4.40237 18.1834 4.40237 18.8166 4.79289 19.2071C5.18342 19.5976 5.81658 19.5976 6.20711 19.2071L12 13.4142L17.7929 19.2071C18.1834 19.5976 18.8166 19.5976 19.2071 19.2071C19.5976 18.8166 19.5976 18.1834 19.2071 17.7929L13.4142 12L19.2071 6.20711Z\\"></path></svg></div><h1>Modal</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur est laudantium nam vel. A aliquam aliquid amet consequatur eligendi, facere iure laudantium nobis nostrum officia sed tempora, temporibus totam? Itaque.</p></div></div>"
`;

exports[`Modal screenshot default 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.modal__modal {
        position: relative;
        animation: modal-hide 0.3s ease-in-out;
        margin: auto 0;
    }
    @keyframes modal-show {
        0% {
            transform: translate3d(0, -10px, 0) scale(0.9);
        }

        100% {
            transform: translate3d(0, 0, 0) scale(1);
        }
    }
    @keyframes modal-hide {
        0% {
            transform: translate3d(0, 0, 0) scale(1);
        }

        100% {
            transform: translate3d(0, 40px, 0) scale(0.9);
        }
    }
    @keyframes overlay-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes overlay-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .modal__modal-cross {
        position: absolute;
        cursor: pointer;
        top: var(--space-12);
        right: var(--space-12);
        color: var(--clr-str-black-050);
        z-index: 1;
    }
    .modal__modal-cross:hover {
            color: var(--clr-str-black-800);
        }
    .modal__modal-cross_view_dark {
            color: var(--clr-str-pure-white-050);
        }
    .modal__modal-cross_view_dark:hover {
                color: var(--clr-str-white-100);
            }
    .modal__overlay_visible .modal__modal {
        animation: modal-show 0.3s ease-in-out;
    }
    .modal__overlay.modal__overlay_visible {
        animation: overlay-show 0.3s ease-in-out forwards;
    }
    .modal__overlay {
        opacity: 0;
        animation: overlay-hide 0.3s ease-in-out;
        padding: 60px 0;
        position: fixed;
        overflow: auto;
        display: flex;
        justify-content: center;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }
    .modal__overlay_default-view {
            background-color: var(--clr-el-gray-060);
            backdrop-filter: blur(8px);
        }
body > div::-webkit-scrollbar {
    visibility: visible;
}

.scrollable-container__vert-scroll-bar {
        right: 0;
        bottom: 0;
        top: 0;
        padding: var(--space-4) var(--space-2);
        background: var(--clr-bg-gray-3);
    }

.scrollable-container__vert-scroll-thumb {
        border-radius: 16px;
        background-color: var(--clr-el-gray-050);
    }
.modal-story__modal {
        background-color: var(--clr-bg-gray-1);
        border-radius: 20px;
        width: 600px;
        padding: var(--space-20);
    }

        .modal-story__modal_high {
            height: 1000px;
        }
    .modal-story__button {
        padding: var(--space-20);
        max-width: max-content;
        border-radius: 20px;
        cursor: pointer;
        background-color: var(--clr-el-gray-040);
    }
    .modal-story__overlay {
        background-color: rgba(0, 0, 0, 0.3);
    }

<div class=\\"modal-story__button\\">click</div><div style=\\"z-index:999\\" data-testid=\\"modal-overlay\\" class=\\"modal__overlay modal__overlay_visible modal__overlay_default-view\\"><div class=\\"modal__modal modal-story__modal\\"><div data-testid=\\"modal-cross\\" class=\\"modal__modal-cross modal__modal-cross_view_light\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19.2071 6.20711C19.5976 5.81658 19.5976 5.18342 19.2071 4.79289C18.8166 4.40237 18.1834 4.40237 17.7929 4.79289L12 10.5858L6.20711 4.79289C5.81658 4.40237 5.18342 4.40237 4.79289 4.79289C4.40237 5.18342 4.40237 5.81658 4.79289 6.20711L10.5858 12L4.79289 17.7929C4.40237 18.1834 4.40237 18.8166 4.79289 19.2071C5.18342 19.5976 5.81658 19.5976 6.20711 19.2071L12 13.4142L17.7929 19.2071C18.1834 19.5976 18.8166 19.5976 19.2071 19.2071C19.5976 18.8166 19.5976 18.1834 19.2071 17.7929L13.4142 12L19.2071 6.20711Z\\"></path></svg></div><h1>Modal</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur est laudantium nam vel. A aliquam aliquid amet consequatur eligendi, facere iure laudantium nobis nostrum officia sed tempora, temporibus totam? Itaque.</p></div></div>"
`;

exports[`Modal screenshot high 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.modal__modal {
        position: relative;
        animation: modal-hide 0.3s ease-in-out;
        margin: auto 0;
    }
    @keyframes modal-show {
        0% {
            transform: translate3d(0, -10px, 0) scale(0.9);
        }

        100% {
            transform: translate3d(0, 0, 0) scale(1);
        }
    }
    @keyframes modal-hide {
        0% {
            transform: translate3d(0, 0, 0) scale(1);
        }

        100% {
            transform: translate3d(0, 40px, 0) scale(0.9);
        }
    }
    @keyframes overlay-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes overlay-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .modal__modal-cross {
        position: absolute;
        cursor: pointer;
        top: var(--space-12);
        right: var(--space-12);
        color: var(--clr-str-black-050);
        z-index: 1;
    }
    .modal__modal-cross:hover {
            color: var(--clr-str-black-800);
        }
    .modal__modal-cross_view_dark {
            color: var(--clr-str-pure-white-050);
        }
    .modal__modal-cross_view_dark:hover {
                color: var(--clr-str-white-100);
            }
    .modal__overlay_visible .modal__modal {
        animation: modal-show 0.3s ease-in-out;
    }
    .modal__overlay.modal__overlay_visible {
        animation: overlay-show 0.3s ease-in-out forwards;
    }
    .modal__overlay {
        opacity: 0;
        animation: overlay-hide 0.3s ease-in-out;
        padding: 60px 0;
        position: fixed;
        overflow: auto;
        display: flex;
        justify-content: center;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }
    .modal__overlay_default-view {
            background-color: var(--clr-el-gray-060);
            backdrop-filter: blur(8px);
        }
body > div::-webkit-scrollbar {
    visibility: visible;
}

.scrollable-container__vert-scroll-bar {
        right: 0;
        bottom: 0;
        top: 0;
        padding: var(--space-4) var(--space-2);
        background: var(--clr-bg-gray-3);
    }

.scrollable-container__vert-scroll-thumb {
        border-radius: 16px;
        background-color: var(--clr-el-gray-050);
    }
.modal-story__modal {
        background-color: var(--clr-bg-gray-1);
        border-radius: 20px;
        width: 600px;
        padding: var(--space-20);
    }

        .modal-story__modal_high {
            height: 1000px;
        }
    .modal-story__button {
        padding: var(--space-20);
        max-width: max-content;
        border-radius: 20px;
        cursor: pointer;
        background-color: var(--clr-el-gray-040);
    }
    .modal-story__overlay {
        background-color: rgba(0, 0, 0, 0.3);
    }

<div class=\\"modal-story__button\\">click</div><div style=\\"z-index:999\\" data-testid=\\"modal-overlay\\" class=\\"modal__overlay modal__overlay_visible modal__overlay_default-view\\"><div class=\\"modal__modal modal-story__modal modal-story__modal_high\\"><div data-testid=\\"modal-cross\\" class=\\"modal__modal-cross modal__modal-cross_view_light\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19.2071 6.20711C19.5976 5.81658 19.5976 5.18342 19.2071 4.79289C18.8166 4.40237 18.1834 4.40237 17.7929 4.79289L12 10.5858L6.20711 4.79289C5.81658 4.40237 5.18342 4.40237 4.79289 4.79289C4.40237 5.18342 4.40237 5.81658 4.79289 6.20711L10.5858 12L4.79289 17.7929C4.40237 18.1834 4.40237 18.8166 4.79289 19.2071C5.18342 19.5976 5.81658 19.5976 6.20711 19.2071L12 13.4142L17.7929 19.2071C18.1834 19.5976 18.8166 19.5976 19.2071 19.2071C19.5976 18.8166 19.5976 18.1834 19.2071 17.7929L13.4142 12L19.2071 6.20711Z\\"></path></svg></div><h1>Modal</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur est laudantium nam vel. A aliquam aliquid amet consequatur eligendi, facere iure laudantium nobis nostrum officia sed tempora, temporibus totam? Itaque.</p></div></div>"
`;
